# releasy

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: releasy.json
examples/: deploy-config.json
examples/deploy/: staging.sh
examples/hooks/: backup.sh  health-check.sh  maintenance.sh  notify.sh
include/: changelog.h  config.h  deploy.h  git_ops.h  release.h  releasy.h  semver.h  ui.h  version.h  workflow.h
releases/1.0.0/: releasy  test_git_ops  test_semver
src/: changelog.c  config.c  deploy.c  deploy.h  git_ops.c  init.c  init.h  main.c  release.c  release_config.c  semver.c  ui.c  version.c
status/: staging.json
test/: deploy-staging.sh
tests/: test_changelog.c  test_changelog_git.c  test_git_ops.c  test_helpers.h  test_semver.c  test_version.c
